--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
   </head>
   <body>
     <div id="root">
+      <!-- Aside Chat -->
       <aside class="chat">
+        <div class="user">
+          <div class="avatar">
+            <img src="img/avatar_io.jpg" alt="Me">
+            <h3>Gianluca</h3>
+          </div>
+          <div class="btn-icons">
+            <ul class="list-inline">
+              <li><a href="#"><i class="fas fa-circle-notch"></i></a></li>
+              <li><a href="#"><i class="fas fa-comment-alt"></i></a></li>
+              <li><a href="#"><i class="fas fa-ellipsis-v"></i></a></li>
+            </ul>
+          </div>
+        </div>
 
       </aside>
+    <!-- /Aside Chat -->
 
       <header>
 
@@ -31,7 +46,7 @@
 
       </main>
       <footer></footer>
-  
+
 
 
     </div>
