Inserita sezione notifiche

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="root">
       <!-- Aside Chat -->
       <aside class="chat">
+        <!-- User section -->
         <div class="user">
           <div class="avatar">
             <img src="img/avatar_io.jpg" alt="Me">
@@ -34,7 +35,20 @@
             </ul>
           </div>
         </div>
+    <!-- User section -->
+    <!-- Notifiche  -->
+        <div class="notify">
 
+            <a href="#"><i class="fas fa-bell-slash"></i></a>
+            <div class="text-notify">
+              <h4>Ricevi notifiche di nuovi messaggi</h4>
+              <p><a href="#">Attiva notifiche di desktop</a></p>
+            </div>
+
+
+
+        </div>
+    <!--/Notifiche  -->
       </aside>
     <!-- /Aside Chat -->
 
