stampo i nomi dei contatti

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
               <p><a href="#">Attiva notifiche di desktop</a></p>
             </div>
 
+        </div>
+        <div class="chat-list">
+          <input class="src" type="text" name="" value="" placeholder="cerca e inizia una nuova chat">
+
+          <div class="friends">
+            <ul>
+              <li v-for='user in contacts'>{{ user.name }}</li>
+            </ul>
+          </div>
 
 
         </div>
