provo con altezze in vh

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </aside>
     <!-- /Aside Chat -->
     <!-- Chat Utente -->
+    <div class="wrapper">
       <header>
         <!-- Friend Info -->
         <div class="avatar">
@@ -107,7 +108,7 @@
       </footer>
   <!-- /Chat Utente -->
 
-
+  </div>
     </div>
     <!-- Day Js -->
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
